# social-network-graph-system

./: .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
data/: README.md
notebooks/: README.md  social_network_graph_analysis.ipynb  social_network_graph_analysis.py
report/: README.md
src/social_network_graph_system/: __init__.py  demo.py  graph.py  sample_data.py
tests/: test_graph.py
